# OpenDTeX-Secure-Boot-DRTM

./: .gitignore  AUTHORS.txt  COPYING.txt  README.md  README.rst  compile.sh
doc/: TPM_API_usage_examples.md
libtpm/: Doxyfile  configure.ac  libtpm.pc.in
libtpm/src/: Makefile.am
libtpm/src/core/: core.c
libtpm/src/crypto/: hkdf.c  hmac.c  sha1.c  sha224-256.c  sha384-512.c  usha.c
libtpm/src/include/: core.h
libtpm/src/include/crypto/: sha-private.h  sha.h
libtpm/src/include/libtpm/: libtpm.h  listkey.h  raw.h  tpmutils.h  types.h
libtpm/src/include/libtpm/trousers/: compat11b.h  platform.h  tcs_defines.h  tcs_error.h  tcs_structs.h  tcs_typedef.h  tpm.h  tpm_error.h  tpm_ordinal.h  trousers_types.h  tss_defines.h  tss_error.h  tss_error_basics.h  tss_structs.h  tss_typedef.h
libtpm/src/raw/: raw.c
libtpm/src/tcs/: tcs_key.c  tcs_pbg.c  tcs_random.c  tcs_utils.c  tcsi_auth.c  tcsi_flush.c  tcsi_key.c  tcsi_pcr.c  tcsi_random.c  tcsi_seal.c  tcsi_sign.c
libtpm/src/tpm/: createkey.c  loadkey.c  seal.c  sign.c  store_key.c  unloadkey.c  unseal.c
libtxt/: Doxyfile  configure.ac  libtxt.pc.in
libtxt/src/: Makefile.am  acmod.c  heap.c  txt.c
libtxt/src/include/: stuff.h
libtxt/src/include/txt/: acmod.h  heap.h  misc.h  mle.h  smx.h  txt.h  txtregs.h
libuc/: Doxyfile  Makefile.am  autogen.sh  configure.ac  libuc.pc.in
libuc/src/: Makefile.am  mem.c  processor-mtrrs.c  snprintf.c  string.c  vsnprintf.c
libuc/src/include/uc/: listentry.h  processor-cpuid.h  processor-msr.h  processor-mtrrs.h  processor.h  types.h  uc.h  uc_mem.h  uc_string.h
libuc/test/: Makefile.am  testuc.c
libuvideo/: Doxyfile  Makefile.am  configure.ac  libuvideo.pc.in
libuvideo/src/: Makefile.am  vga.c  video.c  video_fonts.c  video_picture.c
libuvideo/src/include/: internal.h
libuvideo/src/include/uvideo/: uvideo.h  vbe.h  vga.h
tloader/: Doxyfile  configure.ac
tloader/src/: Makefile.am  main.c  tloader.lds.x
tloader/src/commands/: bootos.c  command.c  command_banner.c  command_initrd32.c  command_kernel.c  command_kernel32.c  command_loadkey.c  command_sealedkernel32.c  kernel32.S  load.S
tloader/src/crypto/: aes_cbc.c  aes_core.c  sha1.c
tloader/src/include/: aes.h  aes_locl.h  com.h  command.h  e820.h  kbd.h  kernel.h  kernel32.h  log.h  memory.h  multiboot.h  processor-apic.h  processor-cpuid.h  processor-msr.h  processor.h  stub.h  system.h  tloader.h  tpm.h  txt.h  types.h  utils.h
tloader/src/system/: boot.S  kbd.c  log.c  memory.c  system.c
tloader/src/tools/: com.c  delay.c  stub.c  utils.c
tloader/src/tpm/: misc.c  tpm.c
tools/: .gitignore  README.txt  VecteurAES.c  aes.c  aes.h  createStruct.py  crypto.c  crypto.h  dtex_rom_getpubkey.c  dtex_verify.c  hex_to_C.py  libtcg.c  libtcg.h  pcrsimul.py  tcg_createkey.c  tcg_createstruct.c  tcg_extend.c  tcg_readpcr.c  tcg_seal.c  tcg_testaes.c  tcg_unseal.c  txt-error.c
